# LabMeeting-Agent

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release-extension.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py  tasks.py
apps/api/app/agent/: __init__.py  budget.py  chunking.py  transcript.py  validation.py
apps/api/app/api/: routes.py
apps/api/app/core/: __init__.py  config.py  enums.py
apps/api/app/db/: session.py
apps/api/app/llm/: base.py  factory.py  mock.py  tongyi.py
apps/api/app/models/: __init__.py  domain.py
apps/api/app/schemas/: domain.py  tasks.py
apps/api/app/services/: memory.py  reporting.py  seed.py  workflow.py
apps/api/migrations/: env.py
apps/api/tests/: test_agent_core.py  test_workflow_integration.py
apps/extension/: index.html  package-lock.json  package.json  vite.config.ts
apps/extension/public/: manifest.json
apps/extension/src/: api.ts  main.tsx  styles.css  types.ts
docs/: demo-script.md  resume.md
